@@ -1,5 +1,10 @@
 2007-02-09  Sebastian Marsching  <sebastian.marsching@1und1.de>
 
+	* src/de/schlund/pfixcore/workflow/context/RequestContextImpl.java (precedingFlowNeedsData): 
+	* src/de/schlund/pfixcore/workflow/Context.java (precedingFlowNeedsData): 
+	* src/de/schlund/pfixcore/workflow/ContextImpl.java (precedingFlowNeedsData): 
+	Renamed flowStepsBeforeCurrentStepNeedData() to precedingFlowNeedsData().
+
 	* projects/core/schema/scriptedflow200602.xsd: 
 	* projects/sample1/conf/scriptedflow/forceadult.script.xml: 
 	* projects/sample1/conf/scriptedflow/ordershirt.script.xml: 
